--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<title>Alif Gustav's Portfolio</title>
+		<title>Alif Gustav's Profile</title>
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous" />
 		<!--  bootsrap icons-->
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css" />
@@ -14,7 +14,7 @@
 	</head>
 	<body id="home">
 		<!-- Navbar -->
-		<nav class="navbar navbar-expand-lg navbar-dark bg-primary shadow-sm fixed-top">
+		<nav class="navbar navbar-expand-lg navbar-dark shadow-sm fixed-top">
 			<div class="container">
 				<a class="navbar-brand" href="#">Hello!</a>
 				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -43,7 +43,7 @@
 		<section class="jumbotron jumbotron-fluid text-center">
 			<img src="img/nakpang.jpg" alt="band-punk" width="180" class="rounded-circle img-thumbnail" />
 			<div class="container">
-				<h1 class="display-4">M Alif Gustav Rachmani</h1>
+				<h1 class="display-4">Alif Gustav</h1>
 				<p class="lead">Informatics Engineering | Institut Teknologi Telkom Purwokerto</p>
 			</div>
 			<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
@@ -80,7 +80,7 @@
 			</div>
 			<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
 				<path
-					fill="#94cdff"
+					fill="#58a5da"
 					fill-opacity="1"
 					d="M0,192L30,165.3C60,139,120,85,180,69.3C240,53,300,75,360,112C420,149,480,203,540,218.7C600,235,660,213,720,192C780,171,840,149,900,128C960,107,1020,85,1080,112C1140,139,1200,213,1260,234.7C1320,256,1380,224,1410,208L1440,192L1440,320L1410,320C1380,320,1320,320,1260,320C1200,320,1140,320,1080,320C1020,320,960,320,900,320C840,320,780,320,720,320C660,320,600,320,540,320C480,320,420,320,360,320C300,320,240,320,180,320C120,320,60,320,30,320L0,320Z"
 				></path>
@@ -157,7 +157,7 @@
 				</div>
 				<div class="row justify-content-center">
 					<div class="col-md-6">
-						<div class="alert alert-success alert-dismissible fade show d-none alert-ku" role="alert">
+						<div class="alert alert-dismissible fade show d-none alert-ku" role="alert">
 							<strong>Thank You!</strong> The message has been sent.
 							<button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
 						</div>
@@ -174,9 +174,10 @@
 								<label for="message" class="form-label">Message</label>
 								<textarea class="form-control" id="mess" rows="3" name="pesan"></textarea>
 							</div>
-							<button type="submit" class="btn btn-primary btn-kirim">Kirim</button>
 
-							<button class="btn btn-primary btn-loading d-none" type="button" disabled>
+							<button type="submit" class="btn btn-danger btn-kirim">Kirim</button>
+
+							<button class="btn btn-danger btn-loading d-none" type="button" disabled>
 								<span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
 								Mohon tunggu...
 							</button>
@@ -186,7 +187,7 @@
 			</div>
 			<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
 				<path
-					fill="#0d6efd"
+					fill="#58a5da"
 					fill-opacity="1"
 					d="M0,192L26.7,181.3C53.3,171,107,149,160,144C213.3,139,267,149,320,165.3C373.3,181,427,203,480,208C533.3,213,587,203,640,186.7C693.3,171,747,149,800,133.3C853.3,117,907,107,960,128C1013.3,149,1067,203,1120,218.7C1173.3,235,1227,213,1280,213.3C1333.3,213,1387,235,1413,245.3L1440,256L1440,320L1413.3,320C1386.7,320,1333,320,1280,320C1226.7,320,1173,320,1120,320C1066.7,320,1013,320,960,320C906.7,320,853,320,800,320C746.7,320,693,320,640,320C586.7,320,533,320,480,320C426.7,320,373,320,320,320C266.7,320,213,320,160,320C106.7,320,53,320,27,320L0,320Z"
 				></path>
@@ -194,7 +195,7 @@
 		</section>
 		<!-- Akhir contact -->
 		<!-- footer -->
-		<footer class="bg-primary text-white text-center pb-5">
+		<footer class="text-white text-center pb-5">
 			<p>Created with <i class="bi bi-heart-fill text-danger"></i> by <a href="https://www.twitter.com/qualipied" class="text-white fw-bold">Alif Gustav</a></p>
 		</footer>
 		<!-- end of footer -->
