--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
 		</nav>
 		<!-- Akhir Navbar -->
 		<!-- Awal Jumbotorn -->
-		<section class="jumbotron jumbotron-fluid text-center">
+		<section class="jumbotron jumbotron-fluid text-center" style="color: white">
 			<img src="img/nakpang.jpg" alt="band-punk" width="180" class="rounded-circle img-thumbnail" />
-			<div class="container">
+			<div class="container1">
 				<h1 class="display-4">Alif Gustav</h1>
 				<p class="lead">Informatics Engineering | Institut Teknologi Telkom Purwokerto</p>
 			</div>
@@ -92,7 +92,7 @@
 			<div class="container">
 				<div class="row text-center mb-3">
 					<div class="col">
-						<h2>My latest Projects</h2>
+						<h2 style="color: white">My latest Projects</h2>
 					</div>
 				</div>
 				<div class="row justify-content-center">
