--- a/index.html
+++ b/index.html
@@ -164,15 +164,15 @@
 						<form name="feedbackFromMy">
 							<div class="mb-3">
 								<label for="name" class="form-label">Name</label>
-								<input type="name" class="form-control" id="name" aria-describedby="name" name="nama" />
+								<input type="name" class="form-control" id="name" aria-describedby="name" name="nama" required />
 							</div>
 							<div class="mb-3">
 								<label for="email" class="form-label">Email address</label>
-								<input type="email" class="form-control" id="email" aria-describedby="email" name="email" />
+								<input type="email" class="form-control" id="email" aria-describedby="email" name="email" required />
 							</div>
 							<div class="mb-3">
 								<label for="message" class="form-label">Message</label>
-								<textarea class="form-control" id="mess" rows="3" name="pesan"></textarea>
+								<textarea class="form-control" id="mess" rows="3" name="pesan" required></textarea>
 							</div>
 
 							<button type="submit" class="btn btn-danger btn-kirim">Kirim</button>
