--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
 								<label for="message" class="form-label">Message</label>
 								<textarea class="form-control" id="mess" rows="3" name="pesan" required></textarea>
 							</div>
-
+							<!-- validasi!! -->
 							<button type="submit" class="btn btn-danger btn-kirim">Kirim</button>
 
 							<button class="btn btn-danger btn-loading d-none" type="button" disabled>
