Managing a middle content

--- a/index.html
+++ b/index.html
@@ -92,47 +92,71 @@
 			<div class="container">
 				<div class="row text-center mb-3">
 					<div class="col">
-						<h2 style="color: white">My latest Projects</h2>
+						<h2 style="color: white">My Latest Projects</h2>
 					</div>
 				</div>
 				<div class="row justify-content-center">
 					<div class="col-md-4 mb-3">
 						<div class="card">
-							<img src="img/projects/project1.jpg" class="card-img-top" alt="punk" />
+							<img src="img/projects/mp1.png" class="card-img-top" alt="punk" />
 							<div class="card-body">
-								<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+								<p class="card-text">A movies lists website latest popular from database using the reactJS library with Hooks function.</p>
 							</div>
 						</div>
 					</div>
 					<div class="col-md-4 mb-3">
 						<div class="card">
-							<img src="img/projects/project2.jpg" class="card-img-top" alt="punk" />
+							<img src="img/projects/mp4.png" class="card-img-top" alt="punk" />
 							<div class="card-body">
-								<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+								<p class="card-text">This web has query form box to searching for an keyword all around the movies in the world.</p>
 							</div>
 						</div>
 					</div>
 					<div class="col-md-4 mb-3">
 						<div class="card">
-							<img src="img/projects/project3.jpg" class="card-img-top" alt="punk" />
+							<img src="img/projects/mp5.png" class="card-img-top" alt="punk" />
 							<div class="card-body">
-								<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+								<p class="card-text">And also, see the description at the below along the content to get more information of all movies.</p>
 							</div>
 						</div>
 					</div>
 					<div class="col-md-4 mb-3">
 						<div class="card">
-							<img src="img/projects/project4.jpg" class="card-img-top" alt="punk" />
+							<img src="img/projects/pm2.png" class="card-img-top" alt="punk" />
 							<div class="card-body">
-								<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+								<p class="card-text">Built an RESTful API for create read update delete using node JS within express JS framework as backend.</p>
 							</div>
 						</div>
 					</div>
 					<div class="col-md-4 mb-3">
 						<div class="card">
-							<img src="img/projects/project5.jpg" class="card-img-top" alt="punk" />
+							<img src="img/projects/pm1.png" class="card-img-top" alt="punk" />
 							<div class="card-body">
-								<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+								<p class="card-text">Furthermore, this API is connected to the sql database to keep the data, and also connected for an runtime.</p>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-4 mb-3">
+						<div class="card">
+							<img src="img/projects/pm3.png" class="card-img-top" alt="punk" />
+							<div class="card-body">
+								<p class="card-text">On the frontend side has built by react JS with html as well, routing and simple styling with bulma css framework.</p>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-4 mb-3">
+						<div class="card">
+							<img src="img/projects/gsn3.jpg" class="card-img-top" alt="punk" />
+							<div class="card-body">
+								<p class="card-text">A social networking website called GASKAN (Gawai Skala Nasional) for a general business purpose oriented.</p>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-4 mb-3">
+						<div class="card">
+							<img src="img/projects/gsn1.jpg" class="card-img-top" alt="punk" />
+							<div class="card-body">
+								<p class="card-text">Some of these features are provide to inbox, friends, schedule, explore, and many more.</p>
 							</div>
 						</div>
 					</div>
@@ -196,7 +220,7 @@
 		<!-- Akhir contact -->
 		<!-- footer -->
 		<footer class="text-white text-center pb-5">
-			<p>Created with <i class="bi bi-heart-fill text-danger"></i> by <a href="https://www.twitter.com/qualipied" class="text-white fw-bold">Alif Gustav</a></p>
+			<p>Created with <i class="bi bi-heart-fill text-danger"></i> by <a href="#" class="text-white fw-bold">Alif Gustav</a></p>
 		</footer>
 		<!-- end of footer -->
 		<!-- <h1 class="text-center text-danger">Dumped in The Sky!</h1> -->
